# File-Synchronization

./: CMakeLists.txt  README.md
Part1/: Part1.md  output.txt  part1  part1.c  result.txt
Part2/: Part2.md  output2.txt  part2  part2.c
Part3/: Part3.md  buffered_open.c  main.c
Part3/test/: script.sh  test2.c  test3.c
Part4/: Part4.md  copytree.c  main_program  part4.c
